Change background color from dark to light

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      background: #0f0f0f;
+      background: #F7F6E8;
       font-family: 'Segoe UI', sans-serif;
       color: #f0f0f0;
     }
