Update profile photo in index.html

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
   <canvas id="bg"></canvas>
 
   <div class="card">
-    <img class="profile-photo" src="photo.jpg" alt="Oscar van den Bosch" />
+    <img class="profile-photo" src="1771252025276 (2).jpg" alt="Oscar van den Bosch" />
     <h1>Oscar van den Bosch</h1>
     <p class="subtitle">Full Stack Developer & Freelancer</p>
 
